Nikita add service page

--- a/instantDispatch/src/Components/homecomponent/safety.css
+++ b/instantDispatch/src/Components/homecomponent/safety.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 .safety{
-    background-color: rgb(250, 250, 250);
+    background-color:  #F8F5F3;;
 }
 .safe-img{
     padding-top: 20%;
