--- a/instantDispatch/src/Components/servicecomponent/mainservice.css
+++ b/instantDispatch/src/Components/servicecomponent/mainservice.css
@@ -3,14 +3,17 @@
     padding: 0%;
 }
 .service-sec2{
-    background-color: rgb(250, 250, 250);
+    background-color: #F8F5F3;
     padding-top: 5%;
     padding-bottom: 5%;
 }
-.service-header{
-    font-size: 50px;
+.service-header h1{
+    font-size: 65px;
     
 }
+.service-header p{
+    font-size: 30px;
+} 
 .service-text{
     width: 50%;
 }
@@ -27,34 +30,41 @@
     padding-top: 6%;
 }
 .service-cards{
-    
+    display: flex; /* Use flexbox to align items */
+     justify-content: center; /* Center the items horizontally */ 
+     align-items: center;
     margin-top: 6%;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 130px;
+    margin-right: 130px;
     margin-bottom: 10%;
     gap: 100px;
   }
 .card-img1{
-    width: 300px;
-    height: 300px;
-    padding-left: 57px;
-   
+    width: 230px;
+    height: 230px;
+    padding-left: 0px;
+    margin-left: 40px;
+    margin-right: 25px;
 }
 .card-img2{
-    width: 300px;
-    height: 300px;
-    padding-left: 57px;
+    width: 230px;
+    height: 230px;
+    padding-left: 0px;
 }
 .card-img3{
-    width: 300px;
-    height: 300px;
-    padding-left: 57px;
+    width: 230px;
+    height:230px;
+    padding-left: 0px;
 }
 .head{
-   padding-top: 20px;
+   padding-top: 5px;
+   padding-left: 2%;
+   padding-right: 2%;
 }
 .par{
-   padding-top: 20px;
+   padding-top: 5px;
+   padding-left: 2%;
+   padding-right: 2%;
 }
 .card1 {
     padding-left: 10px;
@@ -68,6 +78,7 @@
 }
 .card2{
     padding-left: 10px;
+    
 }
 .card2:hover { 
     transform: scale(1.05); /* Enlarge the image slightly */ 
@@ -85,5 +96,16 @@
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Add a box shadow */
         transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
       
+}
+.service-btn{
+    margin-left: 2px;
+    margin-top: 25px;
+    margin-bottom: 40px;
+    padding: 10px;
+    border-radius: 20px;
+    width: 130px;
+    font-size: 17px;
+    background-color: #F8AD42;
+    border: none;
 }
 
