--- a/instantDispatch/src/Components/servicecomponent/fastservice.css
+++ b/instantDispatch/src/Components/servicecomponent/fastservice.css
@@ -33,3 +33,16 @@
     background-color: #F8AD42;
     border: none;
 }
+
+
+@media (max-width:800px) {
+     
+    .fast-text p{
+      
+        width: 70%;
+    }
+    .fastimg{
+        padding-left: 0;
+        width: 80%;
+    }
+    }
