--- a/instantDispatch/src/Components/servicecomponent/mainservice.css
+++ b/instantDispatch/src/Components/servicecomponent/mainservice.css
@@ -108,4 +108,36 @@
     background-color: #F8AD42;
     border: none;
 }
+.img{
 
+
+}
+
+@media (max-width: 600px) {
+     
+    .service-img{
+        padding-left: 0px;
+        
+    }
+   .img{
+    width: 80%;
+   }
+
+    }
+
+    
+@media (max-width: 1100px) {
+     
+    .service-text{
+        width: 80%;
+    }
+
+    }
+
+    /* @media (min-width:1088) and (max-width: 1005px) {
+     
+        .card3 ,.card2 , .card1{
+            padding-left: 0px;
+        }
+    
+        }   */
