--- a/instantDispatch/src/Components/servicecomponent/tryus.css
+++ b/instantDispatch/src/Components/servicecomponent/tryus.css
@@ -21,3 +21,12 @@
     background-color: #F8AD42;
     border: none;
 }
+
+@media (max-width: 600px) {
+     
+    .tryus{
+        margin-left:0;
+        width: 80%;
+    }
+
+    }
