--- a/instantDispatch/src/Components/homecomponent/chooseus.css
+++ b/instantDispatch/src/Components/homecomponent/chooseus.css
@@ -5,7 +5,7 @@
 }
 .choose-us{
     padding: 80px;
-    background-color: rgb(250, 250, 250);
+    background-color: #F8F5F3;;
     margin-bottom: 10px;
 }
 .head-choose{
