--- a/instantDispatch/src/Components/homecomponent/options.css
+++ b/instantDispatch/src/Components/homecomponent/options.css
@@ -3,7 +3,7 @@
     padding: 0%;
 }
 .options-img{
-    margin-left: 100px;
+    margin-left: 230px;
     height: 500px;
-    width: 1300px;
+    width: 1100px
 }
