--- a/instantDispatch/src/Components/servicecomponent/tryus.css
+++ b/instantDispatch/src/Components/servicecomponent/tryus.css
@@ -21,7 +21,11 @@
     background-color: #F8AD42;
     border: none;
 }
-
+.try-img{
+    display: flex;
+    justify-content: center;
+    
+}
 @media (max-width: 600px) {
      
     .tryus{
