--- a/instantDispatch/src/Components/homecomponent/Business.css
+++ b/instantDispatch/src/Components/homecomponent/Business.css
@@ -11,11 +11,13 @@
     border-left: 2px solid red;
 }
 .busniess-par{
-  
+     
     width: 70%;
+    min-width: 300px;
 }
 .bus-img{
     height: 500px;
+    width: 590px;
     padding-right: 88px;
 }
 .bus-btn{
@@ -28,3 +30,22 @@
     background-color: #F8AD42;
     border: none;
 }
+
+@media  (max-width: 790px) {
+    .bus-img{
+    width: 100%;
+     height: 100%;
+     padding-right: 0px;
+    }
+    .business{
+        padding: 10px;
+    }
+    
+ }
+
+ @media  (max-width:1108px) {
+    .bus-img{
+   padding-right: 0;
+    }
+    
+  }
