--- a/instantDispatch/src/Components/homecomponent/safety.css
+++ b/instantDispatch/src/Components/homecomponent/safety.css
@@ -11,6 +11,7 @@
 }
 .safety-text{
     padding: 10%;
+    min-width: 300px;
 }
 .safe-btn{
     margin-left: 10px;
@@ -22,3 +23,20 @@
     background-color: #F8AD42;
     border: none;
 }
+
+@media  (max-width:800px) {
+    .safe-img{
+    width: 100%;
+     height: 100%;
+    }
+   
+ }
+
+ @media  (max-width:1200px) {
+   .safety-text{
+    padding: 2%;
+    padding-top: 13%;
+   }
+   
+ }
+
