--- a/instantDispatch/src/Components/servicecomponent/mainservice.css
+++ b/instantDispatch/src/Components/servicecomponent/mainservice.css
@@ -23,7 +23,7 @@
     justify-content: center;
 }
 .sec2-header{
-    margin-left: 20px;
+    margin-left: 8%;
     padding-left: 5%;
     border-left: 2px solid red;
 }
