--- a/instantDispatch/src/Components/aboutcomponent/forcustomer.css
+++ b/instantDispatch/src/Components/aboutcomponent/forcustomer.css
@@ -11,6 +11,11 @@
     border: none;
 }
 
+.section3-part1{
+    margin-left: 18px;
+    margin-right: 18px;
+}
+
 .section3-button:hover{
 cursor: pointer;
 }
@@ -26,8 +31,8 @@ cursor: pointer;
 }
 
 .shop-img{
-    height: 520px;
-    width: 520px;
+    height: 400px;
+    width: 400px;
 }
 
 .rider-img{
