--- a/instantDispatch/src/Components/bookingcomponent/Form.css
+++ b/instantDispatch/src/Components/bookingcomponent/Form.css
@@ -1,24 +1,24 @@
 .booking-form-container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
   
+
   .booking-heading {
     text-align: center;
     font-size: 2rem;
     margin-bottom: 20px;
   }
   
-
   .booking-form h2 {
     margin-top: 20px;
     font-size: 1.5rem;
   }
-  
 
   .booking-form input,
   .booking-form textarea {
@@ -28,12 +28,12 @@
     border-radius: 5px;
     
   }
-  
+
   .booking-form textarea {
     resize: vertical;
   }
   
-
+  
   
   .vehicle-options label {
     display: flex;
@@ -41,20 +41,71 @@
     align-items: center;
     cursor: pointer;
   }
-  
+
   .vehicle-options i {
     font-size: 2rem;
     margin-top: 5px;
   }
   
-  .booking-button {
+  
+  .booking-button{
     background-color: #F8AD42;
     font-size: 15px;
     padding: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
   }
   
+  .booking-button:hover {
+    background-color: #e9a038;
+  }
   
+  .suggestions-list-pickup {
+    list-style: none;
+    padding: 0;
+    margin-top: 190px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-height: 150px;
+    max-width: 600px;
+    overflow-y: auto;
+    background-color: #fff;
+    position: absolute;
+    width: calc(100% - 16px);
+  }
+
+  .suggestions-list-dilevery {
+    list-style: none;
+    padding: 0;
+    margin-top: 240px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-height: 150px;
+    max-width: 600px;
+    overflow-y: auto;
+    background-color: #fff;
+    position: absolute;
+    width: calc(100% - 16px);
+  }
   
+  .suggestion-item {
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid #eee;
+    list-style: none;
+  }
+  
+  .suggestion-item:last-child {
+    border-bottom: none;
+  }
+  
+  .suggestion-item:hover {
+    background-color: #fcf8f1;
+  }
+  
+#error-border{
+  border: 1px solid red;
+
+}
