--- a/instantDispatch/src/Components/aboutcomponent/Aboutus.css
+++ b/instantDispatch/src/Components/aboutcomponent/Aboutus.css
@@ -28,7 +28,7 @@
      border-left: 2px solid red;
      padding-left: 20px;
      padding-top:3px;
-    
+   margin-top: -40px;
      
  }
  
@@ -60,4 +60,5 @@
     
  
  }
+ 
  
