--- a/instantDispatch/src/Components/NavbarComponents/CustomerNav.css
+++ b/instantDispatch/src/Components/NavbarComponents/CustomerNav.css
@@ -1,6 +1,6 @@
 *{
-    padding: 0;
-    margin:0;
+  padding: 0;
+  margin:0;
 }
 
 
@@ -9,53 +9,48 @@ background-color: #F8AD42;
 
 }
 .nav-brand{
-    
-    padding: 0px 0px; 
-    height: 55px;
-    width: 175px; 
+  
+  padding: 0px 0px; 
+  height: 55px;
+  width: 175px; 
 }
 .container{
-  padding: 0 !important;
+padding: 0 !important;
 }
 .nav-item{
-    text-decoration: none;
-    font-size: 20px;
-    font-weight:500;
-   
-}
-.login-img{
-    
- height: 42px;
- width: 42px;
- display: flex;
- justify-content: center;
- align-items: center;
- background-color: rgb(0, 0, 0);
- color: white;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight:500;
  
- 
- border: none;
- border-radius: 50%;
- margin-top: 10px;
-
-
- padding: 5px;
- font-size: 16px;
-
 }
-
-.nav-item.active {
-   /* text-decoration: underline rgb(238, 234, 234) 2px;
-   text-underline-offset: 5px; */
-font-weight: bolder;
-  }
+.log-img{
   
+height: 42px;
+width: 42px;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: rgb(0, 0, 0);
+color: white;
+
+
+border: none;
+border-radius: 50%;
+margin-top: 10px;
+
+cursor: pointer;
+padding: 5px;
+font-size: 16px;
+
+}
+
+.userDetails { position: absolute; /* Position absolutely */ top: 100px; /* Adjust the top position as needed */ right: 20px; /* Adjust the right position as needed */ background-color: white; padding: 10px; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); z-index: 1000; /* Ensure it appears above other elements */}
+
 
 @media (min-width: 781px) and (max-width: 1039px) {
-       
-    .container { flex-direction: column; align-items: center; } .nav-item { font-size: 18px; margin: 10px 0; } .login-img { margin-top: 15px; font-size: 14px; } .sec2-img { height: 350px; width: 350px; }
      
-  }
+  .container { flex-direction: column; align-items: center; } .nav-item { font-size: 18px; margin: 10px 0; } .login-img { margin-top: 15px; font-size: 14px; } .sec2-img { height: 350px; width: 350px; }
+   
+}
 
-  
-  
+
