--- a/instantDispatch/src/Components/NavbarComponents/CustomerNav.css
+++ b/instantDispatch/src/Components/NavbarComponents/CustomerNav.css
@@ -43,14 +43,54 @@ padding: 5px;
 font-size: 16px;
 
 }
+.notification-icon{
+  /* border: 2px solid black; */
+  border-radius: 50%;
+  margin-left: 10px;
+}
 
-.userDetails { position: absolute; /* Position absolutely */ top: 100px; /* Adjust the top position as needed */ right: 20px; /* Adjust the right position as needed */ background-color: white; padding: 10px; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); z-index: 1000; /* Ensure it appears above other elements */}
+.userDetails { position: absolute; 
+     top: 100px;
+     right: 20px;
+     background-color: white;
+     padding: 10px;
+     border: 1px solid #ccc;
+     border-radius: 8px;
+     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      z-index: 1000; 
+    }
+
+  .notification-sec{
+    position: absolute;
+    top: 100px;
+    right: 20px;
+    background-color: white;
+  
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+     z-index: 1000; 
+     width: 310px;
+     height: 400px;
+     overflow-y: scroll;
+  }  
 
 
 @media (min-width: 781px) and (max-width: 1039px) {
      
-  .container { flex-direction: column; align-items: center; } .nav-item { font-size: 18px; margin: 10px 0; } .login-img { margin-top: 15px; font-size: 14px; } .sec2-img { height: 350px; width: 350px; }
+  .container { flex-direction: column; align-items: center; } 
+  .nav-item { font-size: 18px; margin: 10px 0; }
+   .login-img { margin-top: 15px; font-size: 14px; }
+    .sec2-img { height: 350px; width: 350px; }
    
 }
 
+.delete-btn{
+  display: flex;
+  justify-content: end;
+ 
+}
 
+.delete{
+  background-color: #fbba60;
+}
